removed shapes because it was buggy and took too long to load

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ ul {
 /* Main styles */
 body {
     font-family: Arial, sans-serif;
-    background-image: linear-gradient(95.2deg, rgb(135, 255, 227) 26.8%, rgb(166, 224, 251) 64%);
+    background-image: linear-gradient(95.2deg, rgb(98, 255, 218) 26.8%, rgb(113, 210, 255) 64%);
     color: #252A34;
 }
 
@@ -23,7 +23,6 @@ body.no-transition * {
 
 header {
     padding: 20px;
-    background-color: transparent;
 }
 
 nav {
